@@ -20,6 +20,7 @@ enable_status_window = true
 #   foreground: 아래 preedit_style_fg에 지정한 색으로 전경색을 표시합니다.
 #   background: 아래 preedit_style_bg에 지정한 색으로 배경색을 표시합니다.
 #   color: 아래 preedit_style_fg/bg에 지정한 색으로 전경배경을 표시합니다.
+#   normal: 일반 텍스트와 동일하게 표시합니다.
 preedit_style = color
 
 # 아래에서 사용 가능한 값은 gdk_color_parse()가 인식 가능한 문자열이면 됩니다.
